tests/rosetta/out/C/boyer-moore-string-search.error
cc: exit status 1
/tmp/boyer-moore-string-search.c: In function ‘stringSearch’:
/tmp/boyer-moore-string-search.c:92:16: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
   92 |       result = 0;
      |                ^
/tmp/boyer-moore-string-search.c: In function ‘mochi_main’:
/tmp/boyer-moore-string-search.c:144:26: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  144 |     printf("%d\n", tmp10 + texts.data[i]);
      |                          ^ ~~~~~~~~~~~~~
      |                                      |
      |                                      char *
/tmp/boyer-moore-string-search.c:150:16: error: incompatible types when initializing type ‘int’ using type ‘list_int’
  150 |     int idxs = stringSearch(texts.data[j], patterns.data[j]);
      |                ^~~~~~~~~~~~
/tmp/boyer-moore-string-search.c:153:31: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  153 |     printf("%d\n", "Found \"" + patterns.data[j] + "\" in 'text" + tmp12 +
      |                    ~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~
      |                    |                         |
      |                    char *                    char *
/tmp/boyer-moore-string-search.c:154:50: error: incompatible type for argument 1 of ‘display’
  154 |                        "' at indexes " + display(idxs));
      |                                                  ^~~~
      |                                                  |
      |                                                  int
/tmp/boyer-moore-string-search.c:101:24: note: expected ‘list_int’ but argument is of type ‘int’
  101 | char *display(list_int nums) {
      |               ~~~~~~~~~^~~~
