tests/rosetta/out/C/boyer-moore-string-search.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:58Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:58Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int indexOfStr(char *h, char *n) {
  int hlen = strlen(h);
  int nlen = strlen(n);
  if (nlen == 0) {
    return 0;
  }
  int i = 0;
  while (i <= hlen - nlen) {
    if (slice_string(h, i, i + nlen) == n) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

int stringSearchSingle(char *h, char *n) { return indexOfStr(h, n); }

list_int stringSearch(char *h, char *n) {
  list_int result = list_int_create(0);
  int start = 0;
  int hlen = strlen(h);
  int nlen = strlen(n);
  while (start < hlen) {
    int idx = indexOfStr(slice_string(h, start, hlen), n);
    if (idx >= 0) {
      result = 0;
      start = start + idx + nlen;
    } else {
      break;
    }
  }
  return result;
}

char *display(list_int nums) {
  char *s = "[";
  int i = 0;
  while (i < nums.len) {
    if (i > 0) {
      char *tmp1 = concat_string(s, ", ");
      s = tmp1;
    }
    char *tmp2 = _str(nums.data[i]);
    char *tmp3 = concat_string(s, tmp2);
    s = tmp3;
    i = i + 1;
  }
  char *tmp4 = concat_string(s, "]");
  s = tmp4;
  return s;
}

int mochi_main() {
  list_string texts = list_string_create(6);
  texts.data[0] = "GCTAGCTCTACGAGTCTA";
  texts.data[1] = "GGCTATAATGCGTA";
  texts.data[2] = "there would have been a time for such a word";
  texts.data[3] = "needle need noodle needle";
  texts.data[4] = "DKnuthusesandprogramsanimaginarycomputertheMIXanditsassociat"
                  "edmachinecodeandassemblylanguages";
  texts.data[5] = "Nearby farms grew an acre of alfalfa on the dairy's behalf, "
                  "with bales of that alfalfa exchanged for milk.";
  list_string patterns = list_string_create(6);
  patterns.data[0] = "TCTA";
  patterns.data[1] = "TAATAAA";
  patterns.data[2] = "word";
  patterns.data[3] = "needle";
  patterns.data[4] = "and";
  patterns.data[5] = "alfalfa";
  int i = 0;
  while ((i < 6)) {
    char *tmp5 = _str(i + 1);
    char *tmp6 = concat_string("text", tmp5);
    char *tmp7 = concat_string(tmp6, " = ");
    char *tmp8 = _str(i + 1);
    char *tmp9 = concat_string("text", tmp8);
    char *tmp10 = concat_string(tmp9, " = ");
    printf("%d\n", tmp10 + texts.data[i]);
    i = i + 1;
  }
  printf("\n");
  int j = 0;
  while ((j < 6)) {
    int idxs = stringSearch(texts.data[j], patterns.data[j]);
    char *tmp11 = _str(j + 1);
    char *tmp12 = _str(j + 1);
    printf("%d\n", "Found \"" + patterns.data[j] + "\" in 'text" + tmp12 +
                       "' at indexes " + display(idxs));
    j = j + 1;
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
